예외처리 수정