@@ -153,6 +153,7 @@ public class OrderServiceImpl implements OrderService {
         return new PriceResponseDto(totalPrice, totalPrice);
     }
 
+    //주문(Order)의 상태(Status)를 변경
     @Override
     public OrderResponseDto updateOrderStatus(Long orderId, OrderStatusUpdateDto statusUpdateDto) {
         // 주문 ID로 주문 조회
@@ -169,31 +170,21 @@ public class OrderServiceImpl implements OrderService {
             );
         }
 
-
-        // 새로운 상태로 주문 객체를 새로 생성
-        Order updated = new Order(
-                order.getUser(),
-                order.getStore(),
-                order.getOrderDate(),
-                OrderStatus.valueOf(statusUpdateDto.getStatus()),
-                order.getTotalPrice(),
-                new ArrayList<>(order.getItems()) // ✅ 리스트 복사해서 넘김
-        );
-        Order saved = orderRepository.save(updated);
+        order.changeStatus(OrderStatus.valueOf(statusUpdateDto.getStatus()));
 
         return OrderResponseDto.builder()
-                .id(saved.getId())
-                .userId(saved.getUser().getId())
-                .orderDate(saved.getOrderDate())
-                .status(saved.getStatus().name())
-                .totalPrice(saved.getTotalPrice())
-                .items(saved.getItems().stream().map(item -> new OrderItemResponseDto(
+                .id(order.getId())
+                .userId(order.getUser().getId())
+                .orderDate(order.getOrderDate())
+                .status(order.getStatus().name())
+                .totalPrice(order.getTotalPrice())
+                .items(order.getItems().stream().map(item -> new OrderItemResponseDto(
                         item.getId(),
                         item.getMenu().getId(),
                         item.getStore().getId(),
                         item.getQuantity(),
                         item.getItemPrice()
-                )).collect(Collectors.toList()))
+                )).toList())
                 .build();
     }
 
